<resources>
    <string name="app_name">Assessment</string>
    <string name="image_of_the_captain">Image of the Captain</string>
    <string name="captains_log">Captains Log</string>
    <string name="new_log">New Log</string>
    <string name="review_log">Review Log</string>
    <string name="captains_log">Captains Log</string>
    <string name="image_of_the_captain">Image of the Captain</string>
    <string name="image_of_the_captain">Image of the Captain</string>
    <string name="captains_log">Captains Log</string>
    <string name="delete_logs">Delete Logs</string>
    <string name="captains_log">Captains Log</string>
    <string name="image_of_the_captain">Image of the Captain</string>
    <string name="captains_log">Captains Log</string>
    <string name="image_of_the_captain">Image of the Captain</string>
    <string name="more_options">More options</string>
    <string name="start_at">Start at</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="end_at">End at</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="power_saving_mode">Power Saving Mode</string>
    <string name="captains_log">Captains Log</string>
    <string name="image_of_the_captain">Image of the Captain</string>
</resources>
