<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_cap"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/captains_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/cpt" />

    <TextView
        android:id="@+id/text_cpt_log"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toEndOf="@+id/img_cap"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/recording_settings"
        app:layout_constraintEnd_toEndOf="@+id/text_cpt_log"
        app:layout_constraintStart_toStartOf="@+id/text_cpt_log"
        app:layout_constraintTop_toBottomOf="@+id/text_cpt_log" />

    <Button
        android:id="@+id/btn_start_at"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/start_at"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_tracking"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_more_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/more_options"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_start_tracking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="makeStart"
        android:text="@string/start_tracking"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btn_more_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_end_at"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/end_at"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_tracking"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>